--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-#数据库连接
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -6,5 +5,11 @@ spring:
     username: root
     password: qfjava
     type: com.alibaba.druid.pool.DruidDataSource
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 100MB
+
+
 mybatis:
   mapper-locations: classpath*:/mapper/*.xml
