--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.1.2</version>
+		</dependency>
 	</dependencies>
 
     <!--5、插件-->
