实现活动和车型和消息模块的接口开发并且修复了分页的bug和验证短信验证码的bug

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,14 @@ spring:
     multipart:
       max-file-size: 20MB
       max-request-size: 100MB
-
+server:
+  port: 8088
 
 mybatis:
   mapper-locations: classpath*:/mapper/*.xml
 
 pagehelper:
     helper-dialect: mysql
+    reasonable: true
+    supportMethodsArguments: true
+    params: count=countSql
